--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -4,30 +4,10 @@
 	</div>
 </div>
 
-<div class="player" *ngFor="let player of game.players">
-
-	<div class="card" *ngFor="let card of player.hand" [style.backgroundImage]="'url(' + card.src + ')'"></div>
-
-	pair: {{ player.pair }}
-	<br>
-	flush: {{ player.flush }}
-	<br>
-	twopair: {{ player.twopair }}
-	<br>
-	straight: {{ player.straight }}
-	<br>
-	highcard: {{ player.highcard }}
-	<br>
-	fullhouse: {{ player.fullhouse }}
-	<br>
-	royalflush: {{ player.royalflush }}
-	<br>
-	fourofakind: {{ player.fourofakind }}
-	<br>
-	threeofakind: {{ player.threeofakind }}
-	<br>
-	straightflush: {{ player.straightflush }}
-	<br>
+<div class="players">
+	<div class="player" *ngFor="let player of game.players" [class.winner]="winner(player.id)">
+		<div class="card" *ngFor="let card of player.hand" [style.backgroundImage]="'url(' + card.src + ')'"></div>
+	</div>
 </div>
 
 <button (click)="game.turn()" *ngIf="game.stage == 1">
